--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,43 @@
 body {
-    min-height: 100vh;
+   
+    background-color: beige;
+}
+
+header {
+    background-color: brown;
 }
 
 footer {
-    position: absolute;
+    position:static;
     bottom: 0;
     width: 100%;
+    margin-top: 50px;
+    background-color: brown;
+}
+
+.cent {
+    width: 80%;
+    margin: 0 auto;
+}
+
+
+
+.cat-business {
+    width: 200px;
+    margin: 5px;
+}
+
+.cat-barista {
+    width: 300px;
+    margin: 5px;
+}
+
+h1 {
+    margin: 50px;
+}
+
+.index-sections {
+    margin: 50px 0 50px 0;
+    max-width: 800px;
+    width: 90%;
 }
